docs/1.1/dev/building/overview.md
---
layout: docu
redirect_from:
- /dev/building
- /docs/archive/1.1/dev/building
- /docs/archive/1.1/dev/building/build_instructions
- /docs/archive/1.1/dev/building/platforms
- /docs/archive/1.1/dev/building/supported_platforms
title: Building DuckDB from Source
---

## When Should You Build DuckDB?

DuckDB binaries are available for stable and nightly builds on the [installation page]({% link docs/1.1/installation/index.html %}).
In most cases, it's recommended to use these binaries.
When you are running on an experimental platform (e.g., [Raspberry Pi]({% link docs/1.1/dev/building/raspberry_pi.md %})) or building an unmerged pull request,
you can build DuckDB from source based on the [`duckdb/duckdb` repository hosted on GitHub](https://github.com/duckdb/duckdb/).
This page explains the steps for building DuckDB.

## Prerequisites

DuckDB needs CMake and a C++11-compliant compiler (e.g., GCC, Apple-Clang, MSVC).
Additionally, we recommend using the [Ninja build system](https://ninja-build.org/), which automatically parallelizes the build process.

## Platforms

### Supported Platforms

DuckDB fully supports Linux, macOS and Windows. Both AMD64 (x86_64) and ARM64 (AArch64) builds are available for these platforms.

| Platform name      | Description                          |
|--------------------|--------------------------------------|
| `linux_amd64`      | Linux AMD64 (x86_64)                 |
| `linux_arm64`      | Linux ARM64 (AArch64)                |
| `osx_amd64`        | macOS 12+ AMD64 (Intel CPUs)         |
| `osx_arm64`        | macOS 12+ ARM64 (Apple Silicon CPUs) |
| `windows_amd64`    | Windows 10+ AMD64 (x86_64)           |
| `windows_arm64`    | Windows 10+ ARM64 (AArch64)          |

For instructions to build from source, see:

* [Linux]({% link docs/1.1/dev/building/linux.md %})
* [macOS]({% link docs/1.1/dev/building/macos.md %})
* [Windows]({% link docs/1.1/dev/building/windows.md %})

### Experimental Platforms

There are several additional platforms with varying levels of support.
For some platforms, DuckDB binaries and extensions (or a [subset of extensions]({% link docs/1.1/extensions/working_with_extensions.md %}#platforms)) are distributed. For others, building from source is possible.

| Platform name          | Description                                                                                          |
|------------------------|------------------------------------------------------------------------------------------------------|
| `freebsd_amd64`        | FreeBSD AMD64 (x86_64)                                                                               |
| `freebsd_arm64`        | FreeBSD ARM64 (AArch64)                                                                              |
| `linux_arm64_android`  | Android ARM64 (AArch64)                                                                              |
| `linux_arm64_gcc4`     | Linux ARM64 (AArch64) with GCC 4, e.g., CentOS 7                                                     |
| `wasm_eh`              | WebAssembly Exception Handling                                                                       |
| `wasm_mvp`             | WebAssembly Minimum Viable Product                                                                   |
| `windows_amd64_mingw`  | Windows 10+ AMD64 (x86_64) with MinGW                                                                |
| `windows_amd64_rtools` | Windows 10+ AMD64 (x86_64) for [RTools](https://cran.r-project.org/bin/windows/Rtools/) (deprecated) |
| `windows_arm64_mingw`  | Windows 10+ ARM64 (AArch64) with MinGW                                                               |

> These platforms are not covered by DuckDB's community support. For details on commercial support, see the [support policy page](https://duckdblabs.com/community_support_policy#platforms).

Below, we provide detailed build instructions for some platforms:

* [Android]({% link docs/1.1/dev/building/android.md %})
* [Raspberry Pi]({% link docs/1.1/dev/building/raspberry_pi.md %})

### Outdated Platforms

DuckDB can be built for end-of-life platforms such as [macOS 11](https://endoflife.date/macos) and [CentOS 7/8](https://endoflife.date/centos) using the instructions provided for macOS and Linux.

### 32-bit Architectures

32-bit architectures are officially not supported but it is possible to build DuckDB manually for some of these platforms, e.g., for [Raspberry Pi boards]({% link docs/1.1/dev/building/raspberry_pi.md %}).

## Troubleshooting Guides

We provide troubleshooting guides for building DuckDB:

* [Generic issues]({% link docs/1.1/dev/building/troubleshooting.md %})
* [Python]({% link docs/1.1/dev/building/python.md %})
* [R]({% link docs/1.1/dev/building/r.md %})